ekstask-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    environment: test
  name: test
  namespace: ekstask-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      environment: test
  template:
    metadata:
      labels:
        environment: test
    spec:
      containers:
      - image: nginx:1.16
        name: nginx
        ports:
        - containerPort: 80
