ekstask-service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: ekstask-ns
spec:
  type: NodePort
  ports:
    - nodePort: 32000
      port: 80
      targetPort: 80
  selector:
    environment: test
