ekstask-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-demotask-ingress
  namespace: ekstask-ns
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    environment: test
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: test-app-service
                port:
                  number: 80
